yml/docker-bzitapv1-biggeryunk8s.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: docker-bzitapv1-ingress
  name: docker-bzitapv1-ingress
spec:
  ports:
    - port: 80
  selector:
    app: docker-bzitapv1-ingress

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-bzitapv1-ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-bzitapv1-ingress
    spec:
      imagePullSecrets: 
      - name: landa-biggeryun-secret
      containers:
      - name: docker-bzitapv1-ingress
        #image: harbor.landaudev.com/demo/docker-vuejs-demo:latest #推送到pcf的harbor镜像
        #image: registry.cn-shanghai.aliyuncs.com/landasoft/landa-ma:docker-vuejs-demo #推送到阿里的镜像
        image: harbor.biggerk8s.landaudev.com/landa-ma/docker-bzitapv1-biggeryuningress:lastest1
        ports:
        - containerPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-bzitapv1-ingress
spec:
  rules:
  - host: docker-bzitapv1-ingress.biggerk8s.landaudev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-bzitapv1-ingress
          servicePort: 80
